--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMvMpoxxqXkn+riFrmc8UBo",
+      "authorship_tag": "ABX9TyMfTBGkaN1KEBgSaiGONSYK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -525,12 +525,13 @@
         "               X_test,\n",
         "               y_test):\n",
         "\n",
+        "        self.class_weight = class_weight\n",
         "        self.X_train = X_train\n",
         "        self.y_train = y_train\n",
         "        self.X_test = X_test\n",
         "        self.y_test = y_test\n",
         "\n",
-        "  def define_cnn(self, input_size, units=512, drop_rate=0.25, filter=16, kernel_size=(3*3), output_size=1):\n",
+        "  def build_cnn(self, input_size, units=512, drop_rate=0.25, filter=16, kernel_size=(3*3), output_size=1):\n",
         "    input = keras.layers.Input((input_size))\n",
         "    x = keras.layers.Conv1D(filters=filter, kernel_size=kernel_size, padding='same', activation='relu', name=\"conv1\")(input)\n",
         "    x = keras.layers.MaxPooling1D(padding=\"same\")(x)\n",
@@ -545,7 +546,7 @@
         "    # print(model.summary())\n",
         "    return model\n",
         "\n",
-        "  def define_lstm(self, input_size, units=128, drop_rate=0.25, lstm_units=16, output_size=1):\n",
+        "  def build_lstm(self, input_size, units=128, drop_rate=0.25, lstm_units=16, output_size=1):\n",
         "    input = keras.layers.Input((input_size))\n",
         "    x = keras.layers.LSTM(units=lstm_units, input_shape=input_size, return_sequences=True, name=\"lstm1\")(input)\n",
         "    x = keras.layers.LSTM(units=lstm_units*4, input_shape=input_size, return_sequences=True, name=\"lstm2\")(x)\n",
@@ -556,14 +557,26 @@
         "    model = keras.Model(inputs=input, outputs=output)\n",
         "    # print(model.summary())\n",
         "    return model\n",
-        "  def train_deep_models(self, model, class_weight, epochs=100, batch_size=256, learning_rate=0.01, validation_split=0.2):\n",
+        "\n",
+        "  def build_mlp(self, input_size, hidden_layer_size, output_size):\n",
+        "\n",
+        "    model = tf.keras.Sequential([\n",
+        "                                tf.keras.layers.Dense(input_size,activation=\"relu\"),\n",
+        "                                tf.keras.layers.Dense(hidden_layer_size, activation=\"relu\"),\n",
+        "                                tf.keras.layers.Dense(hidden_layer_size,activation=\"relu\"),\n",
+        "                                tf.keras.layers.Dense(output_size, activation='sigmoid')])\n",
+        "\n",
+        "    return model\n",
+        "\n",
+        "\n",
+        "  def train_model(self, X_train, y_train, model, class_weight, epochs=100, batch_size=256, learning_rate=0.01, validation_split=0.2):\n",
         "\n",
         "    model.compile(optimizer = tf.optimizers.Adam(learning_rate=learning_rate),\n",
-        "                  loss='binary_crossentropy',\n",
+        "                  loss = tf.keras.losses.BinaryCrossentropy(),\n",
         "                  metrics=METRICS)\n",
         "\n",
-        "    history = model.fit(self.X_train,\n",
-        "                        self.y_train,\n",
+        "    history = model.fit(X_train,\n",
+        "                        y_train,\n",
         "                        batch_size = batch_size,\n",
         "                        epochs = epochs,\n",
         "                        shuffle = True,\n",
@@ -571,52 +584,28 @@
         "                        validation_split=validation_split,\n",
         "                        callbacks = [early_stopping],\n",
         "                        verbose = 1)\n",
-        "    return history, model\n",
+        "    return history\n",
         "\n",
-        "  def define_mlp(self, input_size, hidden_layer_size, output_size):\n",
-        "\n",
-        "    self.mlp_model = tf.keras.Sequential([\n",
-        "                                tf.keras.layers.Dense(input_size,activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(hidden_layer_size, activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(hidden_layer_size,activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(output_size, activation='sigmoid')\n",
-        "                                ])\n",
-        "\n",
-        "    self.mlp_model.compile(optimizer='adam', loss='binary_crossentropy', metrics=METRICS)\n",
-        "\n",
-        "\n",
-        "  def evaluation(self, model, batch_size=None):\n",
-        "    if not batch_size is None:\n",
-        "      prediction = model.predict(self.X_test, batch_size=batch_size)\n",
-        "    else:\n",
-        "      prediction = model.predict(self.X_test)\n",
-        "    print(classification_report(self.y_test, prediction))\n",
-        "    plot_confusion_matrix(confusion_matrix(self.y_test, prediction))\n",
+        "  def evaluate(self, model, X_test, Y_train, batch_size=256, treshold=0.5, title=''):\n",
+        "    prediction = model.predict(X_test, batch_size=batch_size)\n",
+        "    print(classification_report(y_test, prediction))\n",
+        "    plot_confusion_matrix(confusion_matrix(y_test, prediction))\n",
         "    return prediction\n",
-        "\n",
-        "  def data_process_lstm(self):\n",
-        "    lstm_X_train = self.X_train.reshape(self.X_train.shape[0], self.X_train.shape[-1], 1)\n",
-        "    self.lstm_X_test = self.X_test.reshape(self.X_test.shape[0], self.X_test.shape[-1], 1)\n",
-        "\n",
-        "    self.train_dataset_sequence = tf.data.Dataset.from_tensor_slices((lstm_X_train , self.y_train))\n",
-        "    self.train_dataset_sequence = self.train_dataset_sequence.cache().shuffle(self.lstm_buffer_size).batch(self.lstm_batch_size).repeat()\n",
-        "\n",
-        "    # self.test_dataset_sequence = tf.data.Dataset.from_tensor_slices((lstm_X_test , self.y_test))\n",
-        "    # self.test_dataset_sequence = self.test_dataset_sequence.cache().shuffle(self.lstm_buffer_size).batch(self.lstm_batch_size).repeat()\n",
-        "\n",
-        "  def define_lstm_model(self, input_shape, output_shape=1):\n",
-        "    self.lstm_model = tf.keras.models.Sequential([tf.keras.layers.LSTM(units=32, return_sequences=True, input_shape=input_shape),\n",
-        "                                            tf.keras.layers.LSTM(units=64, return_sequences=True),\n",
-        "                                            tf.keras.layers.LSTM(units=32),\n",
-        "                                            tf.keras.layers.Dense(1,activation='sigmoid')])\n",
-        "\n",
-        "    self.lstm_model.compile(loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
         "\n",
         "  def train_classic_model(self, model):\n",
         "    return model.fit(self.X_train, self.y_train)\n"
       ],
       "metadata": {
         "id": "lXXuUHUODbJL"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SDuAtzhSeZ9f"
       },
       "execution_count": null,
       "outputs": []
