what's new:  - Add titles  - Add plots  - change way we build mlp next step:  - add baselines

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMfTBGkaN1KEBgSaiGONSYK",
+      "authorship_tag": "ABX9TyMPPKnp7QlFvwaAaEqLWHNH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "30f852dd-85c7-4acc-a757-c64853047558"
+        "outputId": "0a2d7c92-40b4-4ef2-8511-94fdd2887233"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,7 +57,7 @@
         "id": "XIWFK9t8bVk1"
       },
       "source": [
-        "Import libraries and frameworks"
+        "### Imports"
       ]
     },
     {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "MwqF72o5A4-2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -93,39 +93,19 @@
         "sn.set()\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "from sklearn.metrics import precision_recall_curve, roc_auc_score, roc_curve\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "import random\n",
         "from itertools import groupby, chain\n",
         "import pickle"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZOCs9eqca3NV"
-      },
-      "source": [
-        "Get the sisfall and sisfall_enhanced dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_XAle2BBAfFr"
-      },
-      "source": [
-        "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
-        "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
-      ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Constant Variable"
+        "### Additional Functions"
       ],
       "metadata": {
         "id": "RPXpiZUY6HBc"
@@ -139,43 +119,126 @@
       "metadata": {
         "id": "xwGG-KeU6GAL"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bgndfoWWKRIG"
-      },
-      "source": [
-        "# Implementation"
-      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def plot_confusion_matrix(confusion_matrix):\n",
+        "colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
+        "\n",
+        "def plot_confusion_matrix(confusion_matrix, title='', cmap ='Purples'):\n",
         "    df = pd.DataFrame(confusion_matrix, range(len(confusion_matrix)), range(len(confusion_matrix)))\n",
-        "    plt.figure(figsize=(6,4))\n",
-        "    plt.title('Confusion Matrix')\n",
+        "    plt.figure(figsize=(6,3))\n",
+        "    if title == '' :\n",
+        "        plt.title('Confusion Matrix')\n",
+        "    else:\n",
+        "        plt.title('Confusion Matrix' + ' ' + title)\n",
         "    sn.set(font_scale=1) # for label size\n",
-        "    sn.heatmap(df, annot=True, annot_kws={\"size\": 12},fmt='.0f',cmap='Greens') # font size\n",
-        "    plt.show()"
+        "    sn.heatmap(df, annot=True, annot_kws={\"size\": 12},fmt='.0f',cmap=cmap) # font size\n",
+        "    plt.ylabel('Actual label')\n",
+        "    plt.xlabel('Predicted label')\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "def plot_precision_recall_curve(actual_labels, prediction, title='', file_name=None):\n",
+        "    precision, recall, thresholds=precision_recall_curve(actual_labels, prediction)\n",
+        "    plt.figure(figsize=(8,6))\n",
+        "    fig, ax = plt.subplots()\n",
+        "    ax.plot(recall, precision, color='purple')\n",
+        "\n",
+        "    # add axis labels to plot\n",
+        "    if title == '':\n",
+        "        plt.title(title)\n",
+        "    else:\n",
+        "        plt.title('Precision-Recall Curve')\n",
+        "    ax.set_ylabel('Precision')\n",
+        "    ax.set_xlabel('Recall')\n",
+        "\n",
+        "    # display plot\n",
+        "    plt.show()\n",
+        "    if file_name is not None:\n",
+        "        plt.savefig(file_name)\n",
+        "\n",
+        "def plot_roc_curve(actual_labels, prediction, title='', file_name=None):\n",
+        "    fpr, tpr, _ = roc_curve(actual_labels, prediction)\n",
+        "    plt.figure(figsize=(8,6))\n",
+        "    plt.plot(fpr, tpr)\n",
+        "    if title == '':\n",
+        "        plt.title(title)\n",
+        "    else:\n",
+        "        plt.title('ROC Learning Curves')\n",
+        "    plt.xlabel('false positive rate')\n",
+        "    plt.ylabel('true positive rate')\n",
+        "    plt.show()\n",
+        "\n",
+        "    if file_name is not None:\n",
+        "        plt.savefig(file_name)\n",
+        "\n",
+        "\n",
+        "def plot_metrics(history):\n",
+        "    metrics = ['loss', 'PRC', 'Precision', 'Recall']\n",
+        "    plt.figure(figsize=(10,10),linewidth = 7, edgecolor=\"whitesmoke\")\n",
+        "\n",
+        "    for n, metric in enumerate(metrics):\n",
+        "        name = metric.replace(\"_\",\" \").capitalize()\n",
+        "        plt.subplot(2,2,n+1)\n",
+        "        plt.plot(history.epoch, history.history[metric], color=colors[0], label='Train')\n",
+        "        plt.plot(history.epoch, history.history['val_'+metric],\n",
+        "             color=colors[0], linestyle=\"--\", label='Val')\n",
+        "        plt.xlabel('Epoch')\n",
+        "        plt.ylabel(name)\n",
+        "    if metric == 'loss':\n",
+        "        plt.ylim([0, plt.ylim()[1]])\n",
+        "    elif metric == 'auc':\n",
+        "        plt.ylim([0.8,1])\n",
+        "    else:\n",
+        "        plt.ylim([0,1])\n",
+        "\n",
+        "    plt.legend()\n",
+        "\n",
+        "def plot_auc_curve(actual_labels, prediction, model_name, title='', file_name = None):\n",
+        "    fpr, tpr, _ = roc_curve(actual_labels,  prediction)\n",
+        "    auc = roc_auc_score(actual_labels, prediction).round(4)\n",
+        "    plt.figure(figsize=(8,6))\n",
+        "    if title == '':\n",
+        "        plt.title(title)\n",
+        "    else:\n",
+        "        plt.title('AUC Learning Curves')\n",
+        "    plt.plot(fpr,tpr, label='Model: '+ model_name + \", AUC=\" + str(auc), color='red')\n",
+        "    plt.legend(loc=4)\n",
+        "    plt.show()\n",
+        "    if file_name is not None:\n",
+        "        plt.savefig(file_name)\n",
+        "\n",
+        "def plot_history(history):\n",
+        "\n",
+        "    plt.figure(figsize=(10,5),linewidth = 7, edgecolor=\"whitesmoke\")\n",
+        "    n = len(history.history['Accuracy'])\n",
+        "\n",
+        "    plt.plot(np.arange(0,n)+1,history.history['Accuracy'], color='orange',marker=\".\")\n",
+        "    plt.plot(np.arange(0,n)+1,history.history['loss'],'b',marker=\".\")\n",
+        "\n",
+        "    # offset both validation curves\n",
+        "    plt.plot(np.arange(0,n)+ 1,history.history['val_Accuracy'],'r')\n",
+        "    plt.plot(np.arange(0,n)+ 1,history.history['val_loss'],'g')\n",
+        "\n",
+        "    plt.legend(['Train Acc','Train Loss','Val Acc','Val Loss'])\n",
+        "    plt.grid(True)\n",
+        "\n",
+        "    # set vertical limit to 1\n",
+        "    plt.gca().set_ylim(0,1)\n",
+        "\n",
+        "    plt.xlabel(\"Number of Epochs\")\n",
+        "    plt.ylabel(\"Value\")\n",
+        "    plt.suptitle(\"Learning Curve\", size=16, y=0.927)\n",
+        "    plt.show()\n"
       ],
       "metadata": {
-        "id": "Gi1u8eYf4VuO"
+        "id": "Mw2f3Oyj7z4b"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8yS1sWUdbpyd"
-      },
-      "source": [
-        "Get all addresses"
-      ]
     },
     {
       "cell_type": "code",
@@ -211,7 +274,7 @@
         "\n",
         "  return train, test\n"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -220,20 +283,13 @@
         "id": "tCOqfWlyqoI3"
       },
       "source": [
-        "read dataset from address path"
+        "## Pre-Processor"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "class DatasetProcessor():\n",
-        "\n",
-        "  def __init__(self,\n",
-        "               train_dataset_saving_path=None,\n",
-        "               test_dataset_saving_path=None\n",
-        "               ):\n",
-        "    self.train_dataset_saving_path = train_dataset_saving_path\n",
-        "    self.test_dataset_saving_path = test_dataset_saving_path\n",
         "\n",
         "  def __read_data(self, data_path):\n",
         "    data = pd.read_csv(data_path, header=None)\n",
@@ -271,7 +327,6 @@
         "    elif label =='F':\n",
         "      label_path = data_path.replace('dataset', 'enhanced')\n",
         "      labels = pd.read_csv(label_path, header=None)\n",
-        "      # labels[labels == 2] = 1\n",
         "      return labels\n",
         "\n",
         "  def datasets_to_nparray(self, datasets_address_array, outputsize=20000000, column_dimension=10):\n",
@@ -279,7 +334,6 @@
         "    first_index = 0\n",
         "    for address in tqdm(datasets_address_array, ncols=50):\n",
         "      feature = self.__add_label(address)\n",
-        "      # print(len(feature), first_index)\n",
         "      result[first_index : (first_index+len(feature))] = feature\n",
         "      first_index += len(feature)\n",
         "\n",
@@ -294,7 +348,6 @@
         "    label = label.reshape(label.size// window_size, window_size)\n",
         "    label = label.sum(axis=1)\n",
         "    label[label > 0] = 1\n",
-        "    # return feature, label\n",
         "    feature = np.roll((np.roll(feature, -1, axis=0) - feature), 1, axis=0)\n",
         "    feature[0] = 0\n",
         "    return feature, label.ravel()\n",
@@ -308,7 +361,6 @@
         "    label = label.reshape(n_windows, window_size, 1)\n",
         "    label = label.sum(axis=1)\n",
         "    label[label > 0] = 1\n",
-        "    # return feature, label.ravel()\n",
         "    feature = np.roll((np.roll(feature, -1, axis=0) - feature), 1, axis=0)\n",
         "    feature[0] = 0\n",
         "    return feature, label.ravel()\n",
@@ -321,11 +373,6 @@
         "  def dataset_to_tensor(self, window_size, dataset, saving_path):\n",
         "    features, labels = self.windowing(self.__datasets_to_nparray(dataset), window_size)\n",
         "    return features, labels\n",
-        "    # return np.savez(saving_path, inputs=features, targets=labels)\n",
-        "\n",
-        "  def dataset_loader(self, data_path):\n",
-        "    npz = np.load(data_path)\n",
-        "    return npz[\"inputs\"].astype(np.float), npz[\"targets\"].astype(np.int)\n",
         "\n",
         "  def downsampling(self, dataset, down_sampleing_factor):\n",
         "      positive = dataset[dataset['targets']==1]\n",
@@ -367,7 +414,8 @@
         "X_test, y_test = dp.windowing3d(test_dataset)\n",
         "\n",
         "print('4.Normalizing...')\n",
-        "X_train, X_test = dp.normalizer(StandardScaler(), X_train, X_test)\n",
+        "scaler = StandardScaler()\n",
+        "X_train, X_test = dp.normalizer(scaler, X_train, X_test)\n",
         "\n",
         "print('5.Calculate Class Weight...')\n",
         "class_weight = dp.generate_class_weight(y_train)\n"
@@ -431,25 +479,7 @@
         "id": "wXsG6DAmfm7m"
       },
       "source": [
-        "# Main"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9oiw8XrQ3O59"
-      },
-      "source": [
-        "Data Pre-processing"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FsuvZYw8g1wu"
-      },
-      "source": [
-        "Neural Network Training"
+        "## Train & Evaluate"
       ]
     },
     {
@@ -491,45 +521,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X_test[0].shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q9IYG7bojExf",
-        "outputId": "b02219c4-8ad3-48d6-8ffd-ed575acfaeac"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(200, 9)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "class Train_Evaluate():\n",
-        "\n",
-        "  def __init__(self,\n",
-        "               X_train,\n",
-        "               y_train,\n",
-        "               X_test,\n",
-        "               y_test):\n",
-        "\n",
-        "        self.class_weight = class_weight\n",
-        "        self.X_train = X_train\n",
-        "        self.y_train = y_train\n",
-        "        self.X_test = X_test\n",
-        "        self.y_test = y_test\n",
         "\n",
         "  def build_cnn(self, input_size, units=512, drop_rate=0.25, filter=16, kernel_size=(3*3), output_size=1):\n",
         "    input = keras.layers.Input((input_size))\n",
@@ -543,7 +535,6 @@
         "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
         "    output = keras.layers.Dense(output_size, activation='sigmoid')(classifier)\n",
         "    model = keras.Model(inputs=input, outputs=output)\n",
-        "    # print(model.summary())\n",
         "    return model\n",
         "\n",
         "  def build_lstm(self, input_size, units=128, drop_rate=0.25, lstm_units=16, output_size=1):\n",
@@ -555,21 +546,24 @@
         "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
         "    output = keras.layers.Dense(output_size, activation='sigmoid')(classifier)\n",
         "    model = keras.Model(inputs=input, outputs=output)\n",
-        "    # print(model.summary())\n",
         "    return model\n",
         "\n",
         "  def build_mlp(self, input_size, hidden_layer_size, output_size):\n",
         "\n",
-        "    model = tf.keras.Sequential([\n",
-        "                                tf.keras.layers.Dense(input_size,activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(hidden_layer_size, activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(hidden_layer_size,activation=\"relu\"),\n",
-        "                                tf.keras.layers.Dense(output_size, activation='sigmoid')])\n",
-        "\n",
+        "    input = keras.layers.Input((input_size))\n",
+        "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(input)\n",
+        "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(x)\n",
+        "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(x)\n",
+        "    output = keras.layers.Dense(output_size, activation='relu')(x)\n",
+        "    model = keras.Model(inputs=input, outputs=output)\n",
         "    return model\n",
         "\n",
         "\n",
-        "  def train_model(self, X_train, y_train, model, class_weight, epochs=100, batch_size=256, learning_rate=0.01, validation_split=0.2):\n",
+        "  def train_model(self, model, X_train, y_train, class_weight, epochs=100, batch_size=256, learning_rate=0.01, validation_split=0.2):\n",
+        "\n",
+        "    print('----------------------------------')\n",
+        "    print(model.summary())\n",
+        "    print('----------------------------------')\n",
         "\n",
         "    model.compile(optimizer = tf.optimizers.Adam(learning_rate=learning_rate),\n",
         "                  loss = tf.keras.losses.BinaryCrossentropy(),\n",
@@ -586,19 +580,30 @@
         "                        verbose = 1)\n",
         "    return history\n",
         "\n",
-        "  def evaluate(self, model, X_test, Y_train, batch_size=256, treshold=0.5, title=''):\n",
-        "    prediction = model.predict(X_test, batch_size=batch_size)\n",
-        "    print(classification_report(y_test, prediction))\n",
-        "    plot_confusion_matrix(confusion_matrix(y_test, prediction))\n",
-        "    return prediction\n",
+        "  def plot_learning_curves(self, history):\n",
+        "    print('1) Plot learning process based on different metrics...')\n",
+        "    plot_metrics(history)\n",
+        "    print('2) Plot learning curve...')\n",
+        "    return plot_history(history)\n",
         "\n",
-        "  def train_classic_model(self, model):\n",
-        "    return model.fit(self.X_train, self.y_train)\n"
+        "  def evaluate(self, model, X_test, Y_train, batch_size=256, threshold=0.5, title='', plot=True):\n",
+        "    prediction = model.predict(X_test, batch_size=batch_size)\n",
+        "    prediction = np.where(prediction >= threshold, 1, 0)\n",
+        "    print(classification_report(y_test, prediction))\n",
+        "    plot_confusion_matrix(confusion_matrix(y_test, prediction), title=title, cmap ='Greens')\n",
+        "    if plot:\n",
+        "      print('1) Plot ROC Curve...')\n",
+        "      plot_roc_curve(y_test, prediction, title='ROC Curve Of Model'+title, file_name=None)\n",
+        "      print('2) Plot AUC Curve...')\n",
+        "      plot_auc_curve(y_test, prediction, model_name='CNN', title='AUC Curve Of Model'+title, file_name = None)\n",
+        "      print('3) Plot Percision_Recall Curve......')\n",
+        "      plot_precision_recall_curve(y_test, prediction, title='Percision_Recall Curve Of Model'+title, file_name=None)\n",
+        "    return prediction\n"
       ],
       "metadata": {
         "id": "lXXuUHUODbJL"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
