there were some bugs in variables

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMPPKnp7QlFvwaAaEqLWHNH",
+      "authorship_tag": "ABX9TyNHWZuIXakCJpKmhmjPMpKm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -580,37 +580,28 @@
         "                        verbose = 1)\n",
         "    return history\n",
         "\n",
-        "  def plot_learning_curves(self, history):\n",
-        "    print('1) Plot learning process based on different metrics...')\n",
-        "    plot_metrics(history)\n",
-        "    print('2) Plot learning curve...')\n",
-        "    return plot_history(history)\n",
-        "\n",
-        "  def evaluate(self, model, X_test, Y_train, batch_size=256, threshold=0.5, title='', plot=True):\n",
+        "  def evaluate(self, model, X_test, Y_train, batch_size=256, threshold=0.5, title='', model_name='', plot=True):\n",
         "    prediction = model.predict(X_test, batch_size=batch_size)\n",
         "    prediction = np.where(prediction >= threshold, 1, 0)\n",
         "    print(classification_report(y_test, prediction))\n",
-        "    plot_confusion_matrix(confusion_matrix(y_test, prediction), title=title, cmap ='Greens')\n",
+        "    plot_confusion_matrix(confusion_matrix(y_test, prediction), title=title)\n",
         "    if plot:\n",
         "      print('1) Plot ROC Curve...')\n",
         "      plot_roc_curve(y_test, prediction, title='ROC Curve Of Model'+title, file_name=None)\n",
         "      print('2) Plot AUC Curve...')\n",
-        "      plot_auc_curve(y_test, prediction, model_name='CNN', title='AUC Curve Of Model'+title, file_name = None)\n",
+        "      plot_auc_curve(y_test, prediction, model_name=model_name, title='AUC Curve Of Model'+title, file_name = None)\n",
         "      print('3) Plot Percision_Recall Curve......')\n",
         "      plot_precision_recall_curve(y_test, prediction, title='Percision_Recall Curve Of Model'+title, file_name=None)\n",
-        "    return prediction\n"
+        "    return prediction\n",
+        "\n",
+        "  def plot_learning_curves(self, history):\n",
+        "    print('1) Plot learning process based on different metrics...')\n",
+        "    plot_metrics(history)\n",
+        "    print('2) Plot learning curve...')\n",
+        "    return plot_history(history)"
       ],
       "metadata": {
         "id": "lXXuUHUODbJL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SDuAtzhSeZ9f"
       },
       "execution_count": null,
       "outputs": []
@@ -635,24 +626,6 @@
       "source": [],
       "metadata": {
         "id": "jYkwD9PtaWWK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "models_obj = Define_Train(X_train,\n",
-        "                          y_train,\n",
-        "                          X_test,\n",
-        "                          y_test)\n",
-        "\n",
-        "\n",
-        "cnn = models_obj.define_cnn(input_size = X_test[0].shape)\n",
-        "history, model = models_obj.train_deep_models(cnn, class_weight)"
-      ],
-      "metadata": {
-        "id": "SmtNpuQ1i3zW"
       },
       "execution_count": null,
       "outputs": []
