--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNHWZuIXakCJpKmhmjPMpKm",
+      "authorship_tag": "ABX9TyNrkxhFc8LmMAutYf/rPtKd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "0a2d7c92-40b4-4ef2-8511-94fdd2887233"
+        "outputId": "8f972ddb-8247-4747-e712-b7fefab74944"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,7 +57,7 @@
         "id": "XIWFK9t8bVk1"
       },
       "source": [
-        "### Imports"
+        "### Imports and installation"
       ]
     },
     {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "MwqF72o5A4-2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "from itertools import groupby, chain\n",
         "import pickle"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "xwGG-KeU6GAL"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
         "\n",
         "  return train, test\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,9 +381,9 @@
         "\n",
         "  def generate_class_weight(self, label):\n",
         "    class_weights = compute_class_weight(class_weight = \"balanced\",\n",
-        "                                         classes = np.unique(y_train),\n",
-        "                                         y = y_train)\n",
-        "    return dict(zip(np.unique(y_train), class_weights))\n"
+        "                                         classes = np.unique(label),\n",
+        "                                         y = label)\n",
+        "    return dict(zip(np.unique(label), class_weights))\n"
       ],
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
@@ -468,7 +468,38 @@
         "    class_weight = dp.generate_class_weight(y_train)\n"
       ],
       "metadata": {
-        "id": "5X6ABVhhLfNk"
+        "id": "5X6ABVhhLfNk",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 242
+        },
+        "outputId": "9f6e23cb-d9d1-4616-a02f-4989c75f0aed"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-3b68bd422070>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m   \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive/MyDrive/Inputs/X_train_fall.pkl'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mX_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/gdrive/MyDrive/Inputs/X_train_fall.pkl'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'X_train shape: {X_train.shape}')\n",
+        "print(f'y_train shape: {y_train.shape}')\n",
+        "print(f'X_test shape: {X_test.shape}')\n",
+        "print(f'y_test shape: {y_test.shape}')"
+      ],
+      "metadata": {
+        "id": "qp2AhaTKkGxN"
       },
       "execution_count": null,
       "outputs": []
@@ -559,7 +590,7 @@
         "    return model\n",
         "\n",
         "\n",
-        "  def train_model(self, model, X_train, y_train, class_weight, epochs=100, batch_size=256, learning_rate=0.01, validation_split=0.2):\n",
+        "  def train_deep_model(self, model, X_train, y_train, class_weight, epochs=100, batch_size=256, learning_rate=0.01, validation_split=0.2):\n",
         "\n",
         "    print('----------------------------------')\n",
         "    print(model.summary())\n",
