--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNrkxhFc8LmMAutYf/rPtKd",
+      "authorship_tag": "ABX9TyOxq+E2mPgbHJQfSduxlaW8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -580,12 +580,11 @@
         "    return model\n",
         "\n",
         "  def build_mlp(self, input_size, hidden_layer_size, output_size):\n",
-        "\n",
         "    input = keras.layers.Input((input_size))\n",
         "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(input)\n",
-        "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(x)\n",
-        "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(x)\n",
-        "    output = keras.layers.Dense(output_size, activation='relu')(x)\n",
+        "    x = keras.layers.Dense(hidden_layer_size//2, activation='relu')(x)\n",
+        "    x = keras.layers.Dense(hidden_layer_size//4, activation='relu')(x)\n",
+        "    output = keras.layers.Dense(output_size, activation='sigmoid')(x)\n",
         "    model = keras.Model(inputs=input, outputs=output)\n",
         "    return model\n",
         "\n",
