--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -18,7 +18,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "5235e2e9-481e-4c05-ab38-427668d4f1d1"
+        "outputId": "3e190aac-c2c0-4a49-ba08-4a274e09a08e"
       },
       "outputs": [
         {
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
@@ -431,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "id": "5X6ABVhhLfNk"
       },
@@ -469,13 +469,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "qp2AhaTKkGxN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "475c0d9f-3d8a-4988-f725-916ec1c18d4e"
+        "outputId": "8eeb27a6-b91f-4631-b1c7-6f39d2f8b566"
       },
       "outputs": [
         {
@@ -548,7 +548,7 @@
         "from sklearn import svm, datasets\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "iris = datasets.load_iris()\n",
-        "parameters = {'kernel':('linear', 'rbf'), 'C':[20, 10]}\n",
+        "parameters = {'kernel':['linear', 'rbf'], 'C':[20, 10]}\n",
         "svc = svm.SVC()\n",
         "clf = GridSearchCV(svc, parameters)\n",
         "clf.fit(iris.data, iris.target)\n",
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "lXXuUHUODbJL"
       },
@@ -586,84 +586,68 @@
       "source": [
         "class Train_Evaluate_Traditional():\n",
         "\n",
-        "  def __tuning(self, model, parameters, X_validation, y_validation, scoring='f1_macro'):\n",
+        "  def __init__(self,\n",
+        "               predictions={},\n",
+        "               results={}):\n",
+        "    self.predictions= predictions\n",
+        "    self.results= results\n",
+        "\n",
+        "  def __validation(self, X_train, y_train, validation_size=35):\n",
+        "    _, X_validation, _, y_validation = train_test_split(X_train, y_train, test_size=validation_size, stratify=y_train)\n",
+        "    return X_validation, y_validation\n",
+        "\n",
+        "  def __flatten(self, feature_3d):\n",
+        "    return feature_3d.reshape(feature_3d.shape[0], feature_3d.shape[1]*feature_3d.shape[-1])\n",
+        "\n",
+        "  def __feature_selector(self, X_train, y_train, X_test, class_weight, d=64):\n",
+        "    feature_selector = DecisionTreeClassifier(class_weight=class_weight).fit(X_train, y_train)\n",
+        "    important_features = np.argpartition(feature_selector.feature_importances_, -d)[-d:]\n",
+        "    return X_train[:,important_features], X_test[:,important_features]\n",
+        "\n",
+        "  def __parameter_tuning(self, model, parameters, X_validation, y_validation, scoring='f1_macro'):\n",
         "    optimizer = GridSearchCV(estimator=model, param_grid=parameters, scoring=scoring)\n",
         "    optimizer.fit(X_validation, y_validation)\n",
         "    return model.set_params(optimizer.best_params_)\n",
         "\n",
-        "  def build_lstm(self, input_size, units=128, drop_rate=0.25, lstm_units=16, output_size=1):\n",
-        "    input = keras.layers.Input((input_size))\n",
-        "    x = keras.layers.LSTM(units=lstm_units, input_shape=input_size, return_sequences=True, name=\"lstm1\")(input)\n",
-        "    x = keras.layers.LSTM(units=lstm_units*4, input_shape=input_size, return_sequences=True, name=\"lstm2\")(x)\n",
-        "    x = tf.keras.layers.Flatten()(x)\n",
-        "    classifier = keras.layers.Dense(units*4, activation='relu')(x)\n",
-        "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
-        "    classifier = keras.layers.Dense(units, activation='relu')(classifier)\n",
-        "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
-        "    classifier = keras.layers.Dense(units//2, activation='relu')(classifier)\n",
-        "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
-        "    output = keras.layers.Dense(output_size, activation='sigmoid')(classifier)\n",
-        "    model = keras.Model(inputs=input, outputs=output)\n",
-        "    return model\n",
+        "  def __train_model(self, model, X_train, y_train):\n",
+        "    return model.fit(X_train, y_train)\n",
         "\n",
-        "  def build_mlp(self, input_size, hidden_layer_size=128, output_size=1, drop_rate=0.25):\n",
-        "    input = keras.layers.Input((input_size))\n",
-        "    x = keras.layers.Dense(hidden_layer_size//4, activation='relu')(input)\n",
-        "    x = keras.layers.Dense(hidden_layer_size//2, activation='relu')(x)\n",
-        "    x = keras.layers.Dense(hidden_layer_size, activation='relu')(x)\n",
-        "    x = tf.keras.layers.Flatten()(x)\n",
-        "    classifier = keras.layers.Dense(hidden_layer_size*4, activation='relu')(x)\n",
-        "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
-        "    classifier = keras.layers.Dense(hidden_layer_size, activation='relu')(classifier)\n",
-        "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
-        "    classifier = keras.layers.Dense(hidden_layer_size//2, activation='relu')(classifier)\n",
-        "    classifier = keras.layers.Dropout(drop_rate)(classifier)\n",
-        "    output = keras.layers.Dense(output_size, activation='sigmoid')(classifier)\n",
-        "    model = keras.Model(inputs=input, outputs=output)\n",
-        "    return model\n",
-        "\n",
-        "\n",
-        "  def train_deep_model(self, model, X_train, y_train, class_weight, epochs=100, batch_size=256, learning_rate=0.001, validation_split=0.2):\n",
-        "\n",
-        "    print('----------------------------------')\n",
-        "    print(model.summary())\n",
-        "    print('----------------------------------')\n",
-        "\n",
-        "    model.compile(optimizer = tf.optimizers.SGD(learning_rate=learning_rate),\n",
-        "                  loss = keras.losses.BinaryCrossentropy(),\n",
-        "                  metrics=METRICS)\n",
-        "\n",
-        "    history = model.fit(X_train,\n",
-        "                        y_train,\n",
-        "                        batch_size = batch_size,\n",
-        "                        epochs = epochs,\n",
-        "                        shuffle = True,\n",
-        "                        class_weight = class_weight,\n",
-        "                        validation_split=validation_split,\n",
-        "                        callbacks = [early_stopping],\n",
-        "                        verbose = 1)\n",
-        "    return history\n",
-        "\n",
-        "  def evaluate(self, model, X_test, Y_train, batch_size=256, threshold=0.5, title='', model_name='', plot=True):\n",
-        "    prediction = model.predict(X_test, batch_size=batch_size)\n",
-        "    prediction = np.where(prediction >= threshold, 1, 0)\n",
-        "    print(classification_report(y_test, prediction))\n",
+        "  def __evaluate(self, model, X_test, y_test, title=''):\n",
+        "    prediction = model.predict(X_test)\n",
+        "    self.results[title] = classification_report(y_test, prediction, output_dict=True)\n",
         "    plot_confusion_matrix(confusion_matrix(y_test, prediction), title=title)\n",
-        "    if plot:\n",
-        "      print('1) Plot ROC Curve...')\n",
-        "      plot_roc_curve(y_test, prediction, title='ROC Curve Of Model'+title, file_name=None)\n",
-        "      print('2) Plot AUC Curve...')\n",
-        "      plot_auc_curve(y_test, prediction, model_name=model_name, title='AUC Curve Of Model'+title, file_name = None)\n",
-        "      print('3) Plot Percision_Recall Curve......')\n",
-        "      plot_precision_recall_curve(y_test, prediction, title='Percision_Recall Curve Of Model'+title, file_name=None)\n",
         "    return prediction\n",
         "\n",
-        "  def plot_learning_curves(self, history):\n",
-        "    print('1) Plot learning process based on different metrics...')\n",
-        "    plot_metrics(history)\n",
-        "    print('2) Plot learning curve...')\n",
-        "    return plot_history(history)"
+        "  def pipeline(self,\n",
+        "               X_train,\n",
+        "               y_train,\n",
+        "               X_test,\n",
+        "               y_test,\n",
+        "               class_weight,\n",
+        "               list_models,\n",
+        "               list_parameters,\n",
+        "               model_names,\n",
+        "               validation_size=35,\n",
+        "               number_features=64,\n",
+        "               tuning_metric='f1_macro'):\n",
+        "    X_train_flattened, X_test_flattened = self.__flatten(X_train), self.__flatten(X_test)\n",
+        "    X_train_flattened, X_test_flattened = self.__feature_selector(X_train, y_train, X_test, class_weight=class_weight, d=number_features)\n",
+        "    X_validation, y_validation = self.__validation(X_train_flattened, y_train, validation_size=validation_size)\n",
+        "    for i, model in enumerate(list_models):\n",
+        "      print(f'----------------- Working on {model_names[i]} -----------------')\n",
+        "      model = self.__parameter_tuning(model, list_parameters[i], X_validation, y_validation, scoring=tuning_metric)\n",
+        "      mdoel =  self.ــtrain_model(model, X_train_flattened, y_train)\n",
+        "      self.predictions[model_names[i]] = self.ــevaluate(model, X_test_flattened, y_test, title=model_names[i])\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IGgWBPtvYrrf"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -739,10 +723,10 @@
         "                        verbose = 1)\n",
         "    return history\n",
         "\n",
-        "  def evaluate(self, model, X_test, Y_train, batch_size=256, threshold=0.5, title='', model_name='', plot=True):\n",
+        "  def evaluate(self, model, X_test, y_test, batch_size=256, threshold=0.5, title='', model_name='', plot=True):\n",
         "    prediction = model.predict(X_test, batch_size=batch_size)\n",
         "    prediction = np.where(prediction >= threshold, 1, 0)\n",
-        "    print(classification_report(y_test, prediction))\n",
+        "    report = classification_report(y_test, prediction, output_dict=True)\n",
         "    plot_confusion_matrix(confusion_matrix(y_test, prediction), title=title)\n",
         "    if plot:\n",
         "      print('1) Plot ROC Curve...')\n",
@@ -771,44 +755,32 @@
         "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
         "DT = DecisionTreeClassifier(class_weight=class_weight).fit(X_train.reshape(X_train.shape[0], X_train.shape[1]*X_train.shape[-1]), y_train)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "1QWU09sz7RAL"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
         "ind = np.argpartition(DT.feature_importances_, -64)[-64:]\n",
-        "ind"
+        "ind\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "i2o1d9jrAU-c",
-        "outputId": "2274fb93-b88a-455d-f808-f3886ab6f875"
+        "id": "1QWU09sz7RAL",
+        "outputId": "4a860609-ab41-4f48-d6b1-afc881b10918"
       },
-      "execution_count": 39,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ 967,  232,  712, 1153,   97, 1660,  448,  386, 1522,  540, 1582,\n",
-              "        444, 1579, 1438,  471, 1322,  821,  225, 1168,  774, 1612, 1596,\n",
-              "        113,   28, 1414, 1685,  332,  601, 1791,  853, 1725, 1723,  561,\n",
-              "       1783, 1717, 1528,  898, 1796,   78,  979,  172,  697,  520,  358,\n",
-              "        337, 1762, 1603,  385,  682,  137, 1497, 1294,  309,   46, 1366,\n",
-              "        269, 1018,  944, 1798,  169])"
+              "array([1787, 1279, 1586,  182,  712,  448, 1522, 1274,  386,   97, 1660,\n",
+              "       1153, 1791, 1725,  444,  332,  471, 1322, 1579,  967,  540,  821,\n",
+              "       1582,  225,  979,  561, 1762, 1438,  520,  944, 1018, 1497,  269,\n",
+              "        601,   46, 1414,   78,  682,  697,  898, 1528,  172,   28, 1168,\n",
+              "       1612,  169,  309, 1783, 1603, 1685,  385, 1366, 1596,  337,  774,\n",
+              "        853,  358,  113, 1294, 1723, 1796,  137, 1798, 1717])"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 9
         }
       ]
     },
@@ -823,37 +795,33 @@
       "metadata": {
         "id": "HGqgqUJHBnqt"
       },
-      "execution_count": 43,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "prediction = DT.predict(X_test.reshape(X_test.shape[0], X_test.shape[1]*X_test.shape[-1]))\n",
-        "print(classification_report(y_test, prediction))"
+        "# print(classification_report(y_test, prediction))\n",
+        "result = {}\n",
+        "report = classification_report(y_test, prediction, output_dict=True)\n",
+        "result['decision tree'] = report\n",
+        "print(report)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_JhdvaBiHpT",
-        "outputId": "2dc85cd2-7e8c-4f93-f256-864dd8b25b32"
+        "outputId": "e61ce7c8-1ab3-4261-ec96-b4da7a52d0a2"
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.98      0.98      0.98     15665\n",
-            "           1       0.55      0.50      0.53       710\n",
-            "\n",
-            "    accuracy                           0.96     16375\n",
-            "   macro avg       0.77      0.74      0.75     16375\n",
-            "weighted avg       0.96      0.96      0.96     16375\n",
-            "\n"
+            "{'0': {'precision': 0.9771959997452067, 'recall': 0.9793169486115544, 'f1-score': 0.9782553245759469, 'support': 15665}, '1': {'precision': 0.5207100591715976, 'recall': 0.49577464788732395, 'f1-score': 0.5079365079365079, 'support': 710}, 'accuracy': 0.958351145038168, 'macro avg': {'precision': 0.7489530294584021, 'recall': 0.7375457982494391, 'f1-score': 0.7430959162562274, 'support': 16375}, 'weighted avg': {'precision': 0.9574033269020151, 'recall': 0.958351145038168, 'f1-score': 0.9578628751216567, 'support': 16375}}\n"
           ]
         }
       ]
@@ -1289,7 +1257,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPK48gDyJ1keqeY+mWRZFdg",
+      "authorship_tag": "ABX9TyMzjjBxNd5SCdhvHtP8OWz2",
       "include_colab_link": true
     },
     "kernelspec": {
